fix(asset list + miller columns): selected/hover/navigated color contrast

--- a/components/assetlist/index.css
+++ b/components/assetlist/index.css
@@ -183,7 +183,7 @@
 		&:hover,
 		&.is-selected,
 		&.is-navigated {
-			--highcontrast-assetlist-label-color: SelectedItemText;
+			--highcontrast-assetlist-label-color: HighlightText;
 		}
 	}
 }
